tests/samples/expression-invalid-4/error.full.txt
Unexpected "m258" on line 2 at index 52.

1|// error: 4.m258
2|        { (na9me_.a().pm["[]"][mop]["mop'op"].mm(4.m258,'oplm').tty + 9  + (mmo[lm]))}
                                                     ^
3|

File: /mnt/Emile/silassare/blate/src/Exceptions/Traits/BlateExceptionTrait.php
Line: 56
#0 /mnt/Emile/silassare/blate/src/Expressions/Grammar/VarName.php(70): Blate\Exceptions\BlateRuntimeException::withToken()
#1 /mnt/Emile/silassare/blate/src/Expressions/ExpressionParser.php(156): Blate\Expressions\Grammar\VarName->handle()
#2 /mnt/Emile/silassare/blate/src/Expressions/Grammar/Parenthesis.php(59): Blate\Expressions\ExpressionParser->parse()
#3 /mnt/Emile/silassare/blate/src/Expressions/ExpressionParser.php(142): Blate\Expressions\Grammar\Parenthesis->handle()
#4 /mnt/Emile/silassare/blate/src/Expressions/Grammar/Parenthesis.php(40): Blate\Expressions\ExpressionParser->parse()
#5 /mnt/Emile/silassare/blate/src/Expressions/ExpressionParser.php(142): Blate\Expressions\Grammar\Parenthesis->handle()
#6 /mnt/Emile/silassare/blate/src/Expressions/Expression.php(31): Blate\Expressions\ExpressionParser->parse()
#7 /mnt/Emile/silassare/blate/src/Parser.php(142): Blate\Expressions\Expression->get()
#8 /mnt/Emile/silassare/blate/src/Parser.php(94): Blate\Parser->expression()
#9 /mnt/Emile/silassare/blate/src/Blate.php(143): Blate\Parser->parse()
#10 /mnt/Emile/silassare/blate/tests/TemplateSyntaxTest.php(261): Blate\Blate->parse()
#11 /mnt/Emile/silassare/blate/tests/TemplateSyntaxTest.php(93): Blate\Tests\TemplateSyntaxTest->runInvalid()
#12 /mnt/Emile/silassare/blate/vendor/phpunit/phpunit/src/Framework/TestCase.php(1545): Blate\Tests\TemplateSyntaxTest->testExpressionInvalid4()
#13 /mnt/Emile/silassare/blate/vendor/phpunit/phpunit/src/Framework/TestCase.php(1151): PHPUnit\Framework\TestCase->runTest()
#14 /mnt/Emile/silassare/blate/vendor/phpunit/phpunit/src/Framework/TestResult.php(726): PHPUnit\Framework\TestCase->runBare()
#15 /mnt/Emile/silassare/blate/vendor/phpunit/phpunit/src/Framework/TestCase.php(903): PHPUnit\Framework\TestResult->run()
#16 /mnt/Emile/silassare/blate/vendor/phpunit/phpunit/src/Framework/TestSuite.php(677): PHPUnit\Framework\TestCase->run()
#17 /mnt/Emile/silassare/blate/vendor/phpunit/phpunit/src/Framework/TestSuite.php(677): PHPUnit\Framework\TestSuite->run()
#18 /mnt/Emile/silassare/blate/vendor/phpunit/phpunit/src/Framework/TestSuite.php(677): PHPUnit\Framework\TestSuite->run()
#19 /mnt/Emile/silassare/blate/vendor/phpunit/phpunit/src/TextUI/TestRunner.php(673): PHPUnit\Framework\TestSuite->run()
#20 /mnt/Emile/silassare/blate/vendor/phpunit/phpunit/src/TextUI/Command.php(143): PHPUnit\TextUI\TestRunner->run()
#21 /mnt/Emile/silassare/blate/vendor/phpunit/phpunit/src/TextUI/Command.php(96): PHPUnit\TextUI\Command->run()
#22 /mnt/Emile/silassare/blate/vendor/phpunit/phpunit/phpunit(98): PHPUnit\TextUI\Command::main()
#23 {main}